Team page styling

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
             </div>
             <div class="link_container">
                 <h3>Get your team link</h3>
+                <p class="copy_text">Link copied!</p>
                 <div class="input_group">
-                    <input type="text" value="" id="link_input"><button id="clipboard_copy"><img
+                    <input type="text" value="" id="link_input" readonly><button id="clipboard_copy"><img
                             src="img/icons/copy_icon.svg"></button>
                 </div>
             </div>
@@ -96,6 +97,7 @@
                         <div class="phone"></div>
                         <div class="e-mail"></div>
                     </div>
+                    <button class="add" data-action="addtoteam"></button>
                 </div>
             </article>
         </div>
