--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <div class="phone"></div>
                         <div class="e-mail"></div>
                     </div>
-                    <button class="add" data-action="addtoteam"></button>
+                    <button class="add_modal" data-action="addtoteam"></button>
                 </div>
             </article>
         </div>
